--- a/src/container/bio.hbs
+++ b/src/container/bio.hbs
@@ -46,7 +46,7 @@
             <p><strong>{{year}}</strong></p>
             {{/each}}
          </ul>
-    </section>
+    </section class=mt-3>
     <hr>
     <section>
           {{> title data="Publication" big=true}}
@@ -103,7 +103,7 @@
             {{/with}}
           </ul>
     </section>
-    <hr>
+    <hr class="mt-2">
     <section>
           {{> title data="Quotes" big=true}}
           <ul>
